--- a/.env.example
+++ b/.env.example
@@ -9,7 +9,7 @@ MONGODB_URI=mongodb+srv://your_username:your_password@cluster0.example.mongodb.n
 JWT_SECRET=your_super_secret_jwt_key_here_make_it_long_and_random_at_least_32_characters_2024
 
 # Frontend URL
-FRONTEND_URL=http://localhost:5173
+FRONTEND_URL=https://web-dev-hub-iota.vercel.app
 
 # Email Configuration (Gmail SMTP)
 EMAIL_HOST=smtp.gmail.com
